# Quoridor

./: .gitignore  .gitlab-ci.yml  README.md  dune-project  quoridor.opam
lib/: board.ml  board.mli  botJoseph.ml  botJoseph.mli  bot_1100_101_1.ml  cotrez.ml  desousa.ml  engine.ml  engine.mli  gabin_bot.ml  gabin_bot.mli  iglesias.ml  iglesias.mli  montre.ml  paris.ml  paris.mli  servigne.ml  servigne.mli  shay.ml  types.ml  types.mli  vie.ml  vie.mli  yazici.ml  yazici.mli
quoridor/: .gitignore  dune-project
quoridor/_build/: .db  .digest-db  log
quoridor/_build/default/.dune/: configurator  configurator.v2
quoridor/_build/default/lib/: quoridor.cmxa  quoridor.ml-gen
quoridor/_build/default/lib/.merlin-conf/: lib-quoridor
quoridor/_build/default/lib/.quoridor.objs/: quoridor__Engine.impl.d
quoridor/_build/default/lib/.quoridor.objs/byte/: quoridor.cmi  quoridor.cmo  quoridor.cmt  quoridor__Board.cmi  quoridor__Board.cmo  quoridor__Board.cmt  quoridor__Engine.cmi  quoridor__Engine.cmo  quoridor__Engine.cmt  quoridor__Types.cmi  quoridor__Types.cmo  quoridor__Types.cmt
quoridor/_build/default/lib/.quoridor.objs/native/: quoridor.cmx  quoridor__Board.cmx  quoridor__Engine.cmx  quoridor__Types.cmx
quoridor/lib/: Types.ml  Types.mli  board.ml  board.mli  engine.ml  types.ml  types.mli
test/: dune  quoridor.ml  quoridor_test.ml  test_board.ml  test_engine.ml  utils.ml
