(lang dune 3.11)

(name quoridor)

(generate_opam_files true)

(source
 (uri git+https://gaufre.informatique.univ-paris-diderot.fr/quoridor-2023/projet-ocaml-2023---quoridor.git))

(authors "Evan Joffrin")

(maintainers "Ali Eljamai, Mathaui Yves Abdorohmang")

(license LICENSE)

(package
 (name quoridor)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
